--- a/ENVersion/YMCA.html
+++ b/ENVersion/YMCA.html
@@ -33,10 +33,10 @@ allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; pic
 <footer>
     <p>Contáctame</p>
     <p>
-        <a href="mailto:evillezcasl.ii@gmail.com"><img src="images/icons_img/mail-2048128_1920.png" alt="email"></a>
-        <a href="https://www.linkedin.com/in/elsyvillezcas-leal/"><img src="images/icons_img/linkedin-2048132_1920.png" alt="linkedin"></a>
-        <a href="https://www.instagram.com/elmavile6/"><img src="images/icons_img/instagram-2048131_1920.png" alt="instagram"></a>
-        <a href="https://www.pinterest.com/"><img src="images/icons_img/pinterest-2048134_1920.png" alt="instagram"></a>
+        <a href="mailto:evillezcasl.ii@gmail.com"><img src="../images/icons_img/mail-2048128_1920.png" alt="email"></a>
+        <a href="https://www.linkedin.com/in/elsyvillezcas-leal/"><img src="../images/icons_img/linkedin-2048132_1920.png" alt="linkedin"></a>
+        <a href="https://www.instagram.com/elmavile6/"><img src="../images/icons_img/instagram-2048131_1920.png" alt="instagram"></a>
+        <a href="https://www.pinterest.com/"><img src="../images/icons_img/pinterest-2048134_1920.png" alt="instagram"></a>
     </p>
         <small>© Todos los derechos de autor del contenido 2023, Elsy Villezcas</small>
 </footer>
