--- a/ESVersion/CPT.html
+++ b/ESVersion/CPT.html
@@ -87,7 +87,7 @@
 
 <article>
   <div id="BTHP">
-    <p><b><a href="../ElsysPortfolioES.html">La pantalla de inicio</a></b></p>
+    <p><b><a href="ElsysPortfolioES.html">La pantalla de inicio</a></b></p>
 </div>
 </article>
 
