--- a/ESVersion/Freelance.html
+++ b/ESVersion/Freelance.html
@@ -53,7 +53,7 @@
 </article>
 <article>
 <div id="BTHP">
-    <p><b><a href="../ElsysPortfolioES.html">La pantalla de inicio</a></b></p>
+    <p><b><a href="ElsysPortfolioES.html">La pantalla de inicio</a></b></p>
 </div>
 </article>
 <footer>
