--- a/ESVersion/YMCA.html
+++ b/ESVersion/YMCA.html
@@ -25,7 +25,7 @@
     <br>
 
     <div id="BTHP">
-        <p><b><a href="../ElsysPortfolioES.html">La pantalla de inicio</a></b></p>
+        <p><b><a href="ElsysPortfolioES.html">La pantalla de inicio</a></b></p>
     </div>
 </article>
 
