--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <h1>Elsy's Website</h1>
     <p class="more">You can learn more about me in Spanish and in French!</p>
     <p><a href="index.html"><img src="images/Flags_img/Flag_of_the_United_Kingdom_(1-2).svg.png" alt="englishlanguage" width="30" height="30"></a>
-        <a href="ElsysPortfolioES.html"><img src="images/Flags_img/Bandera_de_España.svg.png" alt="spanishlanguage" width="30" height="30"></a>
+        <a href="ESVersion/ElsysPortfolioES.html"><img src="images/Flags_img/Bandera_de_España.svg.png" alt="spanishlanguage" width="30" height="30"></a>
     </header>
 
         
