--- a/ESVersion/ElsysPortfolioES.html
+++ b/ESVersion/ElsysPortfolioES.html
@@ -6,7 +6,7 @@
             Sitio Web de Elsy
         </title>
         <style>
-            @import url(CSS/Resume.css);
+            @import url(../CSS/Resume.css);
             @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;500;700&display=swap');
         </style>
     </head>
