--- a/aboutme/ENVersion/CPT.html
+++ b/aboutme/ENVersion/CPT.html
@@ -4,20 +4,71 @@
   <meta charset="utf-8" >
    <title>Book Me!</title>
    <style>
-      @import url(../CSS/CPT.css);
-      @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;500;700&display=swap');
-      ol, ul { 
-     list-style-type: none;
-      }
+      @import url(../../CSS/CPT.css);
+            @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;500;700&display=swap');
+            #grid {
+                display: grid;
+                grid-template-rows: auto;
+                grid-template-columns: auto;
+                grid-template-areas:
+                "nav"
+                "article" 
+                "footer"; 
+            }
+            header {
+                grid-area: nav; 
+            }
+            #article {
+                grid-area: article;
+            }
+            footer {
+                grid-area: footer;
+            } 
+            @media screen and (min-width: 940px) {
+            #grid {
+                display: grid;
+                grid-template-rows: auto;
+                grid-template-columns: auto;
+                grid-template-areas:
+                "nav"
+                "article" 
+                "footer"; 
+            }
+            header {
+                grid-area: nav; 
+            }
+            #article {
+                grid-area: article;
+            }
+            footer {
+                grid-area: footer;
+            } 
+            img[alt*="BacktoNav"]{ 	
+                position: fixed;
+                bottom: 5%;
+                right: 5%;
+            }
+            }
    </style>
 </head>
 
 <body>
   <header>
-    <nav><h1>Book Me, as your NEW Personal Trainer!</h1></nav>
-    <p><a href="CPT.html"><img src="../images/Flags_img/Flag_of_the_United_Kingdom_(1-2).svg.png" alt="englishlanguage" width="30" height="30"></a>
-      <a href="../ESVersion/CPT.html"><img src="../images/Flags_img/Bandera_de_España.svg.png" alt="spanishlanguage" width="30" height="30"></a>
-   </header>
+    <nav>
+    <ul id="nav">
+        <li><b><a href="../../index.html">About me</a></b></li>
+        <li><b><a href="../../EN/education.html">Education</a></b></li>
+        <li><b><a href="../../EN/experience.html">Experience</a></b></li>
+        <li><b><a href="../../EN/service.html">Service & Leadership Experience</a></b></li>
+        <li><b><a href="../../EN/skills.html">Skills</a></b></li>
+    </ul>
+    </nav>
+
+<h1>Elsy's Website</h1>
+<p class="more">You can learn more about me in Spanish!</p>
+<p><a href="CPT.html"><img src="../../images/Flags_img/Flag_of_the_United_Kingdom_(1-2).svg.png" alt="englishlanguage" width="30" height="30"></a>
+    <a href="../ESVersion/CPT.html"><img src="../../images/Flags_img/Bandera_de_España.svg.png" alt="spanishlanguage" width="30" height="30"></a>
+</header>
 
 <article>
 <h2>If you need help starting your fitness journey, I can help you!</h2>
@@ -79,21 +130,24 @@
 
 </section>
 </form>
-</article>
-<article>
-  <div id="BTHP">
-      <p><b><a href="../index.html">Back to home page</a></b></p>
+<div id="BTHP">
+      <p><b><a href="Freelance.html">Back to Navigation</a></b></p>
   </div>
-  </article>
-<footer>
-  <p>Contact Me</p>
-  <p>
-    <a href="mailto:evillezcasl.ii@gmail.com"><img src="../images/icons_img/mail-2048128_1920.png" alt="email"></a>
-    <a href="https://www.linkedin.com/in/elsyvillezcas-leal/"><img src="../images/icons_img/linkedin-2048132_1920.png" alt="linkedin"></a>
-    <a href="https://www.instagram.com/elmavile6/"><img src="../images/icons_img/instagram-2048131_1920.png" alt="instagram"></a>
-    <a href="https://www.pinterest.com/"><img src="../images/icons_img/pinterest-2048134_1920.png" alt="instagram"></a>
-  </p>
-      <small>© All content copyright 2023, Elsy Villezcas</small>
-</footer>
+</article>
+
+  <a href="#nav"><img src="../../images/icons_img/arrow_upward.png" alt="BacktoNav"></a>
+
+  <footer>
+      <p>Contact me</p>
+      <p>
+          <a href="mailto:evillezcasl.ii@gmail.com"><img src="../../images/icons_img/mail-2048128_1920.png" alt="email"></a>
+          <a href="https://www.linkedin.com/in/evillezl/"><img src="../../images/icons_img/linkedin-2048132_1920.png" alt="linkedin"></a>
+          <a href="https://www.instagram.com/elmavile6/"><img src="../../images/icons_img/instagram-2048131_1920.png" alt="instagram"></a>
+          <a href="https://www.pinterest.com/"><img src="../../images/icons_img/pinterest-2048134_1920.png" alt="instagram"></a>
+      </p>
+          <small>© All content copyright 2023, Elsy Villezcas</small>
+  </footer>
+
+ </div>
 </body>
 </html>
