--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             #grid {
                 display: grid;
                 grid-template-rows: auto;
-                grid-template-columns: minmax(25em, 1fr) 30em;
+                grid-template-columns: minmax(25em, 1fr) auto;
                 grid-template-areas:
                 "nav nav"
                 "article instagram" 
