--- a/EN/skills.html
+++ b/EN/skills.html
@@ -90,7 +90,7 @@
                 <dt><b>Leaderships:</b></dt> 
                     <dd>Curriculum Development<br>Behavior Modeling<br>Staff Scheduling & Interviewing<br>Community Outreach<br>Conducted Documentation Requirements<br>Working Collaboratively<br>Critical thinking.</dd>
                 <dt><b>Certifications:</b></dt> 
-                    <dd>Certification of Proficiency in Spanish and French<br>Certification in Personal Training</dd> 
+                    <dd>Certification of Proficiency in Spanish and French<br>Certification in Personal Training<br>(New) Responsive Web Design Certification</dd> 
                 <dt><b>Interest:</b></dt> 
                     <dd>Exploring other cultures<br>Language classes<br>Reading<br>Hiking<br>Rock Climbing<br>Weight Training<br>Pilates<br>Cycling<br>Yoga</dd>
             </dl>
