--- a/education/ENVersion/CS/CS1030.html
+++ b/education/ENVersion/CS/CS1030.html
@@ -106,20 +106,19 @@
             <h3>1880</h3>
                 <h4>What was the Hollerith Machine</h4>
 
-                <p>In 1880, 
-                    punching card and sort content.
-                    counted for number of category
-
+                <p>In 1880, the census took 7 years to count, everyone was fed up of taking the time. So, Herman Hollerith, who worked for the census of 1880, 
+                    invented a punch card tabilating machine. Installed in federal goverment offices in 1888. Where people would punch their data. Then, tabulation 
+                    started reading the holes on each section. After, the clerk transcribed the data in the dail hands and put it in designated sorter drawer.
+                    They would process 80 punch cards per minute. In 1890, the census was completed in 2 weeks. This is important for computer science history because 
+                    in brought in a new age of automatic data processing, in trying to analyze data from taking months, to weeks, and now maybe seconds.
                 </p>
 
                 <h4>Citation</h4>
                 <ul>
                     <li>Magazine, S. (2011, December 9). <cite>Herman Hollerith's tabulating machine.</cite> Smithsonian.com. 
                         Retrieved April 6, 2023, from https://www.smithsonianmag.com/smithsonian-institution/herman-holleriths-tabulating-machine-2504989/ </li>
-                    <li><cite>Dynamic programming in Javascript using tabulation.</cite>Section. (n.d.). 
-                        Retrieved April 6, 2023, from https://www.section.io/engineering-education/dynamic-programming-in-javascript-using-tabulation/ </li>
-                    <li>Cruz, F. da. (n.d.). <cite>Hollerith 1890 census tabulator.</cite>
-                        Retrieved April 6, 2023, from http://www.columbia.edu/cu/computinghistory/census-tabulator.html </li>
+                    <li>Heather. (2022, December 5). <cite>Tabulating machine.</cite> History. Retrieved April 23, 2023, from https://history-computer.com/tabulating-machine/ 
+                        United States Census Bureau. Retrieved April 20, 2023, from https://www.census.gov/history/www/innovations/technology/the_hollerith_tabulator.html </li>
                 </ul>
         </section>
         <p><a href="#1947"><img src="../../../images/icons_img/arrow_downward_FILL0_wght400_GRAD0_opsz48.png" alt="next"></a></p>
