--- a/EN/education.html
+++ b/EN/education.html
@@ -97,7 +97,7 @@
                 <td>Career</td>
             </tr>
             <tr>
-                <td>Executive Certification</td>
+                <td><a href="../education/ENVersion/NSLS/executivecert.html">Executive Certification</a></td>
                 <td>Level 3</td>
                 <td>Outreach</td>
             </tr>
@@ -113,26 +113,37 @@
             <th>Spanish Classes</th>
             <th>Translation Classes</th>
             <th>Computer Science Classes</th>
+            <th>Physical Education Classes</th>
         </tr>
         <tr>
             <td>Latin Superhero’s in Media</td>
             <td>Business Language Translation</td>
             <td>Web Design & Usability</td>
+            <td><a href="../education/ENVersion/PE/PE1055.html">Pilates</a></td>
         </tr>
         <tr>
             <td>Sustainability in Media</td>
             <td>Audiovisual Translation</td>
             <td><a href="../education/ENVersion/CS/CS1030.html">Foundations of Computing</a></td>
+            <td>Strength Training and Conditioning</td>
         </tr>
         <tr>
             <td>Immigration in Film</td>
             <td>Translation</td>
             <td>Programming</td>
+            <td>Cross Fitness</td>
         </tr>
         <tr>
             <td>Cultural Heritage of Spain</td>
             <td></td>
             <td></td>
+            <td>Jogging</td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td>Yoga</td>
         </tr>
         </table>
 
