--- a/education/ENVersion/NSLS/executivecert.html
+++ b/education/ENVersion/NSLS/executivecert.html
@@ -79,10 +79,9 @@
             <p><a href="../../../EN/education.html"><img src="../../../images/Flags_img/Flag_of_the_United_Kingdom_(1-2).svg.png" alt="englishlanguage" width="30" height="30"></a>
     </header>
 <article>
-    <h2>What do we do in executive leadership in NSLS?</h2>
-    <p>In the executive leadership NSLS, we focus on how we can build our projects by making meaningful relationships, investigating and research, applying project management skills, and demonstrate the impact this had with me. 
-        
-        If I focus on having a better me, it can inspire someone to have a better world.
+    <h2>What we do to get our Executive Leadership Certificate in NSLS?</h2>
+    <p>In the Executive Leadership Certificate (NSLS), we focus on how we can build our projects, hobbies, ideas, to make a better world. 
+    We should be making meaningful relationships, investigating and research, applying project management skills, and demonstrate the impact this and How others can apply it?
         
         Each semester I will create goals to showcase, what I have learned? what I want to improve on? And how I can apply it to future projects?.
 
