new update for pe 1070

--- a/EN/education.html
+++ b/EN/education.html
@@ -78,7 +78,7 @@
             Education</h2>
         <hr>
         <p><b>Weber State University</b> | <a href="../education/A.A.Spanish.pdf"><i>Associates of Art (2-year degree) in Spanish</i></a></p>
-  
+            <p>Want to learn more! Click on the links below!</p>
         <table id="table">
             <caption><b>Membership:</b></caption>
             <tr>
