--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
             I am more than eager to apply these skills of technology, integrity, communication, organization and delegation in a new environment.</p> 
         <h2 id="about">Updates!<hr></h2>
         <ol>
+            <li>My strength training programs, click <a href="education/ENVersion/PE/PE1070.html">here</a> to view more! -<em>April 30th,2023</em></li>
             <li>Explaining what executive leadership is in NSLS, click <a href="education/ENVersion/NSLS/executivecert.html">here</a> to view more! -<em>April 29th,2023</em></li>
             <li>What I learned so far in Pilates, and how you can apply it, click <a href="education/ENVersion/PE/PE1055.html">here</a> to view more! -<em>April 26th,2023</em></li>
             <li>Started showcasing assigments for class Foundations of Programming, click <a href="education/ENVersion/CS/1030/CS1030.html">here</a> to view more! -<em>April 24th,2023</em></li>
