--- a/EN/education.html
+++ b/EN/education.html
@@ -113,7 +113,7 @@
             <th>Spanish Classes</th>
             <th>Translation Classes</th>
             <th>Computer Science Classes</th>
-            <th>Physical Education Classes</th>
+            <th><a href="../education/ENVersion/PE/PE1070.html">Physical Education Classes</a></th>
         </tr>
         <tr>
             <td>Latin Superhero’s in Media</td>
