--- a/EN/education.html
+++ b/EN/education.html
@@ -113,7 +113,7 @@
             <th>Spanish Classes</th>
             <th>Translation Classes</th>
             <th>Computer Science Classes</th>
-            <th><a href="../education/ENVersion/PE/PE1070.html">Physical Education Classes</a></th>
+            <th>Physical Education Classes</th>
         </tr>
         <tr>
             <td>Latin Superhero’s in Media</td>
@@ -125,7 +125,7 @@
             <td>Sustainability in Media</td>
             <td>Audiovisual Translation</td>
             <td><a href="../education/ENVersion/CS/CS1030.html">Foundations of Computing</a></td>
-            <td>Strength Training and Conditioning</td>
+            <td><a href="../education/ENVersion/PE/PE1070.html">Strength Training and Conditioning</a></td>
         </tr>
         <tr>
             <td>Immigration in Film</td>
