--- a/education/ENVersion/PE/PE1070.html
+++ b/education/ENVersion/PE/PE1070.html
@@ -51,6 +51,12 @@
                 right: 5%;
             }
         }
+        iframe {
+                border: double 4px #FF8787;
+                margin: .5em;
+                width: 100%;
+                height: 600px;
+            }
         </style>
     </head>
 <body>
@@ -71,8 +77,8 @@
     </header>
 <article>
     <div id="grid2">
-    <div id="skills1" style="max-width:608px"><h2>Journaling what I have learned so far from Strength Training Class!</h2><div style="position:relative;padding-bottom:66.118421052632%"><iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQ99e2xT4HDdAIrrPqZOMDch8BO91DXLzXkTNG3JuF9UyYAOvxNTgITUmNJnvamhOkP3z7iXUK3r2Kl/pubhtml?widget=true&amp;headers=false"></iframe></div></div>
-    <div id="skills2" style="max-width:608px"><h2>Journaling what I have learned so far from Apple Fitness+!</h2><div style="position:relative;padding-bottom:66.118421052632%"><iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQyBUnzC35Yv1CuL5w9zgqpZau_laCLPr1sUVPHN5tJhb0cQ1I_arv4r16KSpBs36dpHhVTSnS8apgM/pubhtml?widget=true&amp;headers=false"></iframe></div></div>
+    <div id="skills1"><h2>Journaling what I have learned so far from Strength Training Class!</h2><iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQ99e2xT4HDdAIrrPqZOMDch8BO91DXLzXkTNG3JuF9UyYAOvxNTgITUmNJnvamhOkP3z7iXUK3r2Kl/pubhtml?widget=true&amp;headers=false"></iframe></div>
+    <div id="skills2"><h2>Journaling what I have learned so far from Apple Fitness+!</h2><iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQyBUnzC35Yv1CuL5w9zgqpZau_laCLPr1sUVPHN5tJhb0cQ1I_arv4r16KSpBs36dpHhVTSnS8apgM/pubhtml?widget=true&amp;headers=false"></iframe></div>
     </div>
     <div id="BTHP">
         <p><b><a href="../../../EN/education.html">Back to Education Page</a></b></p>
