--- a/education/ENVersion/PE/PE1055.html
+++ b/education/ENVersion/PE/PE1055.html
@@ -67,7 +67,7 @@
         </nav>
 
     <h1>Elsy's Website</h1>
-            <p><a href="../../../EN/education.html"><img src="../../../images/Flags_img/Flag_of_the_United_Kingdom_(1-2).svg.png" alt="englishlanguage" width="30" height="30"></a>
+            <p><a href="../../../education/ENVersion/PE/PE1055.html"><img src="../../../images/Flags_img/Flag_of_the_United_Kingdom_(1-2).svg.png" alt="englishlanguage" width="30" height="30"></a>
     </header>
 <article>
     <h2>Applying what I have learned so far!</h2>
