--- a/education/ENVersion/PE/PE1070.html
+++ b/education/ENVersion/PE/PE1070.html
@@ -26,6 +26,9 @@
             footer {
                 grid-area: footer;
             } 
+            div {
+                margin: .5em
+            }
             @media screen and (min-width: 940px) {
             #grid {
                 display: grid;
@@ -73,7 +76,7 @@
         </nav>
 
     <h1>Elsy's Website</h1>
-            <p><a href="../../../EN/education.html"><img src="../../../images/Flags_img/Flag_of_the_United_Kingdom_(1-2).svg.png" alt="englishlanguage" width="30" height="30"></a>
+            <p><a href="../../../education/ENVersion/PE/PE1070.html"><img src="../../../images/Flags_img/Flag_of_the_United_Kingdom_(1-2).svg.png" alt="englishlanguage" width="30" height="30"></a>
     </header>
 <article>
     <div id="grid2">
