new updates website

--- a/EN/education.html
+++ b/EN/education.html
@@ -67,44 +67,20 @@
         </nav>
 
     <h1>Elsy's Website</h1>
-        <p class="more">You can learn more about me in Spanish!</p>
-            <p><a href="education.html"><img src="../images/Flags_img/Flag_of_the_United_Kingdom_(1-2).svg.png" alt="englishlanguage" width="30" height="30"></a>
-            <a href="../ES/education.html"><img src="../images/Flags_img/Bandera_de_España.svg.png" alt="spanishlanguage" width="30" height="30"></a>
     </header>
+    
 
     <article id="article">
         <h2 id="education">
             <img src="../images/icons_img/ADVCERT.png" alt="NSLSAdvancedLeadershipCertification" width="150" height="150">
             Education</h2>
         <hr>
-        <p><b>Weber State University</b> | <a href="../education/A.A.Spanish.pdf"><i>Associates of Art (2-year degree) in Spanish</i></a></p>
-            <p>Want to learn more! Click on the links below!</p>
+        <p><b>Weber State University</b> | <a href="../education/A.A.Spanish.pdf">A.A. in Spanish</a> | B.A. in Spanish for the Professions, Minor in Buisness Administration, Expected Graduation April 2024.</i></a></p>
+            <p>Want to learn more about my Courses! Click on the links on below!
         <table id="table">
             <caption><b>Membership:</b></caption>
             <tr>
-                <th>The National Society of Leadership and Success</th>
-                <th>Wildcat Advantage</th>
-                <th>Apex Certification</th>
-            </tr>
-            <tr>
-                <td>Induction</td>
-                <td>Level 1</td>
-                <td>Core</td>
-            </tr>
-            <tr>
-                <td>Advanced Certification</td>
-                <td>Level 2</td>
-                <td>Career</td>
-            </tr>
-            <tr>
-                <td><a href="../education/ENVersion/NSLS/executivecert.html">Executive Certification</a></td>
-                <td>Level 3</td>
-                <td>Outreach</td>
-            </tr>
-            <tr>
-                <td></td>
-                <td></td>
-                <td>Education</td>
+                <th>The National Society of Leadership and Success | Member | Advanced Leadership Certification</th>
             </tr>
         </table>
         <table>
@@ -112,38 +88,44 @@
         <tr>
             <th>Spanish Classes</th>
             <th>Translation Classes</th>
-            <th>Computer Science Classes</th>
-            <th>Physical Education Classes</th>
+            <th>Buisness Administration Classes</th>
+            <th>Elective Courses</th>
         </tr>
         <tr>
             <td>Latin Superhero’s in Media</td>
             <td>Business Language Translation</td>
-            <td>Web Design & Usability</td>
+            <td>Buisness Administration</td>
             <td><a href="../education/ENVersion/PE/PE1055.html">Pilates</a></td>
         </tr>
         <tr>
             <td>Sustainability in Media</td>
             <td>Audiovisual Translation</td>
-            <td><a href="../education/ENVersion/CS/CS1030.html">Foundations of Computing</a></td>
-            <td><a href="../education/ENVersion/PE/PE1070.html">Strength Training and Conditioning</a></td>
+            <td>Accounting</td>
+            <td>Web Design and Usability</td>
         </tr>
         <tr>
             <td>Immigration in Film</td>
             <td>Translation</td>
-            <td>Programming</td>
-            <td>Cross Fitness</td>
+            <td>Organizational and Supply Chain Management</td>
+            <td><a href="../education/ENVersion/PE/PE1070.html">Strength Training and Conditioning</a></td>
         </tr>
         <tr>
             <td>Cultural Heritage of Spain</td>
             <td></td>
+            <td>Marketing Concepts</td>
             <td></td>
-            <td>Jogging</td>
         </tr>
         <tr>
+            <td>Grammer and Composition</td>
             <td></td>
+            <td>Organizational Leadership</td>
             <td></td>
+        </tr>
+    <tr>
+            <td>Spanish Literature</td>
             <td></td>
-            <td>Yoga</td>
+            <td>Legal Enviroment of Buisness</td>
+            <td></td>
         </tr>
         </table>
 
