--- a/EN/experience.html
+++ b/EN/experience.html
@@ -67,9 +67,6 @@
         </nav>
 
     <h1>Elsy's Website</h1>
-    <p class="more">You can learn more about me in Spanish!</p>
-    <p><a href="experience.html"><img src="../images/Flags_img/Flag_of_the_United_Kingdom_(1-2).svg.png" alt="englishlanguage" width="30" height="30"></a>
-        <a href="../ES/experience.html"><img src="../images/Flags_img/Bandera_de_España.svg.png" alt="spanishlanguage" width="30" height="30"></a>
     </header>
 
 <article id="article">
@@ -78,16 +75,23 @@
     <hr>
 
     <section id="Eventcoordinator">
-        <h3>Bilingual Event Coordinator,</h3>
-        <p><i>Nov. 2021 to Present</i></p>
+        <h3>Bilingual Event Coordinator & Receptionist</h3>
+        <p><i>Aug. 2021 to Present</i></p>
         <p><b>Weber State Community Education Center</b> | Ogden, UT</p>
         
         <ul>
-            <li>Bilingual in Spanish and English.</li>
-            <li>Achieved <em>95%</em> customer satisfaction score based on feedback forms.</li>
-            <li>Successfully handled <em>50+</em> phone calls daily with no complaints during the last 2 years.</li>
-            <li>Greeting/assisting customers with information and registration for programs at the WSU CEC </li>
-            <li>Consulted events in the office scheduling system.</li>
+            <li> Interim Administrative Assistant from March 2022 to May 2022.</li>
+            <li> Processed correspondence, documents, and reports to support clerical staff.</li>
+            <li> Achieved a 95% customer satisfaction score based on feedback forms.</li>
+            <li> Successfully handled 50+ daily phone calls with no complaints for the past 2 years.</li>
+            <li> Balanced cash drawers at shift beginning and end.</li>
+            <li> Processed 20+ cash register transactions per day on POS and provided correct change.</li>
+            <li> Resolved average of 25+ inquiries per day and consistently met performance benchmarks and goals.</li>
+            <li> Used a needs-based, customer-focused review process to educate customers about continuing education courses.</li>
+            <li> Consulted in 15+ events per month with customers in the office scheduling system.</li>
+            <li> Negotiated new contracts with 3 vendors, lowering associated costs by 35%.</li>
+            <li> Organized local events and retreats with an average of 100+ participants for 12+ months.</li>
+            <li> Received a 97% response rate in favor of repeated business.</li>
         </ul>
 
     </section>
