--- a/EN/service.html
+++ b/EN/service.html
@@ -67,28 +67,19 @@
     </nav>
 
     <h1>Elsy's Website</h1>
-        <p class="more">You can learn more about me in Spanish!</p>
-            <p><a href="service.html"><img src="../images/Flags_img/Flag_of_the_United_Kingdom_(1-2).svg.png" alt="englishlanguage" width="30" height="30"></a>
-            <a href="../ES/service.html"><img src="../images/Flags_img/Bandera_de_España.svg.png" alt="spanishlanguage" width="30" height="30"></a>
-</header>
+    </header>
 
     <article id="article">
         <h2 id="volunteer">Volunteer Service</h2>
             <hr>
-        <h3>Volunteer Translator & Interpreter</h3>
-        <p><i>January. 2023 to Present</i></p>
-        <p><b>The Advocates for Human Rights</b></p>
-            <ul>
-                <li>Help translate immigration documents from Spanish to English</li> 
-                <li>Help interpret for immigration clients from Spanish to English</li>
-            </ul>
-            <p class="more">For more information to <a href="https://www.theadvocatesforhumanrights.org/Volunteer/Interpret">become a translator or interpreter for The Advocates for Human Rights!</a></p>
         
         <h3>Volunteer Ted Talk Translator</h3>
         <p><i>Mar. 2022 to Present</i></p>
         <p><b>Ted Talks</b></p>
             <ul>
-                <li>Help translate TED Talk Videos from Spanish to English</li>
+                <li> Translate 3+ 5-to-20-minute videos per month from English (Global) to Spanish (Latin American)</li>
+                <li> Translate 2+ 5-to-20-minute videos per month from Spanish (Latin American) to English (Global)</li>
+                <li> Translate Videos in the Health, and Technical Fields.</li>
             </ul>
             <p class="more">For more information to become a <a href="https://www.ted.com/participate/translate">become a translator for TED!</a></p>
         
@@ -96,7 +87,7 @@
         <p><i>Mar. 2017 to Mar. 2020</i></p>
         <p><b>Wee Lads and Lassies Preschool</b> | Ogden, UT</p>
             <ul>
-                <li>Be a team player and create a motivated, friendly work environment with other employees.</li>
+                <li>Created a motivated, friendly work environment with other employees.</li>
                 <li>Coordinated and arranged decorations, equipment, and food service to facilitate various entertaining activities. </li>
                 <li>Monitored students to observe behavior, enforce rules and maintain safety.</li>
             </ul>
