--- a/EN/skills.html
+++ b/EN/skills.html
@@ -67,9 +67,6 @@
     </nav>
 
     <h1>Elsy's Website</h1>
-        <p class="more">You can learn more about me in Spanish!</p>
-            <p><a href="skills.html"><img src="../images/Flags_img/Flag_of_the_United_Kingdom_(1-2).svg.png" alt="englishlanguage" width="30" height="30"></a>
-            <a href="../ES/skills.html"><img src="../images/Flags_img/Bandera_de_España.svg.png" alt="spanishlanguage" width="30" height="30"></a>
 </header>
 
     <article id="article">
@@ -78,21 +75,23 @@
         <div id="grid2">
             <dl id="skills1">
                 <dt><b>Languages:</b></dt>
-                    <dd>Spanish <br> English</dd>
+                    <dd>English, Native<br>Spanish, Native</dd>
                 <dt><b>Web Skills:</b></dt> 
-                    <dd>HTML<br>CSS</dd>
+                    <dd>HTML<br>CSS<br>JavaScript<br>PHP<br>SQL</dd>
                 <dt><b>Operating Systems:</b></dt> 
-                    <dd>Microsoft Windows<br>macOS.</dd>
+                    <dd>Windows<br>MacOS</dd>
                 <dt><b>Translation Technologies:</b></dt> 
                     <dd>CAT tools;<br>MemoQ<br>Phrase<br>SubtitleEdit<br>Captionhub</dd>
             </dl> 
             <dl id="skills2">
                 <dt><b>Leaderships:</b></dt> 
-                    <dd>Curriculum Development<br>Behavior Modeling<br>Staff Scheduling & Interviewing<br>Community Outreach<br>Conducted Documentation Requirements<br>Working Collaboratively<br>Critical thinking.</dd>
-                <dt><b>Certifications:</b></dt> 
-                    <dd>Certification of Proficiency in Spanish and French<br>Certification in Personal Training<br>(New) Responsive Web Design Certification</dd> 
+                    <dd>Delegation<br> Community Outreach<br>Contract Negations<br>Cost Accounting<br>Coordination and Collaboration<br>
+                        Staff and Strategic Planning<br>Time Management<br>Task Prioritization<br>Critical Thinking<br>Client Relations<br>Written
+                        Communications</dd>
+                <dt><b>Productivity Tools</b></dt>
+                    <dd>Microsoft<br>G Suite<br>Asana<br>Zoom<br>Banner (ERP) System</dd>
                 <dt><b>Interest:</b></dt> 
-                    <dd>Exploring other cultures<br>Language classes<br>Reading<br>Hiking<br>Rock Climbing<br>Weight Training<br>Pilates<br>Cycling<br>Yoga</dd>
+                    <dd>Learning Languages<br>Pilates<br>Web Design and Developer<br>Thrifting</dd>
             </dl>
         </div>   
     </article> 
