--- a/education/ENVersion/PE/PE1070.html
+++ b/education/ENVersion/PE/PE1070.html
@@ -76,12 +76,11 @@
         </nav>
 
     <h1>Elsy's Website</h1>
-            <p><a href="../../../education/ENVersion/PE/PE1070.html"><img src="../../../images/Flags_img/Flag_of_the_United_Kingdom_(1-2).svg.png" alt="englishlanguage" width="30" height="30"></a>
     </header>
 <article>
     <div id="grid2">
     <div id="skills1"><h2>Journaling what I have learned so far from Strength Training Class!</h2><iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQ99e2xT4HDdAIrrPqZOMDch8BO91DXLzXkTNG3JuF9UyYAOvxNTgITUmNJnvamhOkP3z7iXUK3r2Kl/pubhtml?widget=true&amp;headers=false"></iframe></div>
-    <div id="skills2"><h2>Journaling what I have learned so far from Apple Fitness+!</h2><iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQyBUnzC35Yv1CuL5w9zgqpZau_laCLPr1sUVPHN5tJhb0cQ1I_arv4r16KSpBs36dpHhVTSnS8apgM/pubhtml?widget=true&amp;headers=false"></iframe></div>
+    <div id="skills2"><h2>Keeping at it!</h2><iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTGjFqtht-scB4dVifzjiF2jrPx-0XpQuMfipA9_FWSaZ-BvvZoS8Qr46qA8G-4ZweYtV08w7W9yV77/pubhtml?widget=true&amp;headers=false"></iframe></div>
     </div>
     <div id="BTHP">
         <p><b><a href="../../../EN/education.html">Back to Education Page</a></b></p>
